lib/tools/orbit/test_output/lazy_ograph.output
Flow compiler (3rd generation)

Processing 'orbit' on http server

tests/lazy_ograph.orb: tests/lazy_ograph.orb:86:7: Parse error
  let sourceExpr = extractOGraphNode(graph, sourceNodeId),
      ^
